Changes to index and ui-ux pages
Changed content such as titles and descriptions.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <a href="index.html" class="nav-link">About</a>
         <a href="ui-ux.html" class="nav-link">UI/UX</a>
-        <a href="marketing.html" class="nav-link">Marketing</a>
+        <a href="marketing.html" class="nav-link">Other Projects</a>
     </nav>
 
     <main data-scroll-container>
