--- a/ui-ux.html
+++ b/ui-ux.html
@@ -20,8 +20,8 @@
 
     <header class="container" id="section 1" class="containersec1">
         <hgroup class="stick_top">
-            <h1>A Narrative Website</h1>
-            <h2>Neufcycle</h2>
+            <h1>Digital Platforms</h1>
+            <h2>Evenko</h2>
             <!-- <img src="images/18219090_Isolated_white_t_shirt_with_hanger.png" alt="" class="mediumpic"> -->
         </hgroup>
 
@@ -31,7 +31,7 @@
             </div>
             <div class="card-details">
               <h2>UI, Front-end Developer</h2>
-              <p>Description of the project goes here.</p>
+              <p>Bell Center, Osheaga, Place Bell, Mtelus, IleSoniq and Lasso web and apps</p>
             </div>
         </a>
         
@@ -39,8 +39,8 @@
 
     <section class="container" id="section 2">
         <hgroup class="stick_top">
-            <h1>Portfolio Redesign</h1>
-            <h2>Self-project</h2>
+            <h1>Educational Platform</h1>
+            <h2>Talentelle</h2>
             <!-- <img src="images/consumer awareness.png" alt="" class="largepic"> -->
 
         </hgroup>
@@ -50,7 +50,7 @@
             </div>
             <div class="card-details">
               <h2>UI/UX, Front-end Developer</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam possimus totam molestiae dolorum exercitationem.</p>
+              <p>Educational platform for a movie about entrepreneurs</p>
             </div>
         </a>
 
@@ -58,8 +58,8 @@
 
     <section class="container" id="section 3">
         <hgroup class="stick_top">
-            <h1>Pizza Delivery</h1>
-            <h2>Lion's Corner (Coming Soon)</h2>
+            <h1>Fashion Brand</h1>
+            <h2>Neufcycle</h2>
             <!-- <img src="images/Creativity and Individuality.png" alt="" class="largepic"> -->
         </hgroup>
 
@@ -67,8 +67,8 @@
             <div class="portfolio-card-3">
             </div>
             <div class="card-details">
-              <h2>Project Title</h2>
-              <p>Description of the project goes here.</p>
+              <h2>UI/UX, Front-end Developer</h2>
+              <p>A project for my class</p>
             </div>
         </a>
     </section>
@@ -76,7 +76,7 @@
     <section class="container" id="section 4">
         <hgroup class="stick_top">
             <h1>Uni Demo</h1>
-            <h2>Grey-Box (Coming Soon)</h2>
+            <h2>Grey-Box platform</h2>
             <!-- <img src="images/Quality and Durability.png" alt="" class="largepic"> -->
 
         </hgroup>
@@ -85,8 +85,8 @@
             <div class="portfolio-card-4">
             </div>
             <div class="card-details">
-              <h2>Project Title</h2>
-              <p>Description of the project goes here.</p>
+              <h2>UI/UX</h2>
+              <p>Group Project for Uni Box</p>
             </div>
         </a>
 
