updated my ui-ux page
changed the projects thumbnails, links, titles and descriptions.

--- a/ui-ux.html
+++ b/ui-ux.html
@@ -45,7 +45,7 @@
 
         </hgroup>
 
-        <a href="project-details.html" class="portfolio-card-link">
+        <a href="https://corevizuals.github.io/Talentelle/" class="portfolio-card-link">
             <div class="portfolio-card-2">
             </div>
             <div class="card-details">
@@ -58,25 +58,25 @@
 
     <section class="container" id="section 3">
         <hgroup class="stick_top">
-            <h1>Fashion Brand</h1>
-            <h2>Neufcycle</h2>
+            <h1>Cleaning Service</h1>
+            <h2>Groupe MMI</h2>
             <!-- <img src="images/Creativity and Individuality.png" alt="" class="largepic"> -->
         </hgroup>
 
-        <a href="project-details.html" class="portfolio-card-link">
+        <a href="https://groupemmi.ca/" class="portfolio-card-link">
             <div class="portfolio-card-3">
             </div>
             <div class="card-details">
               <h2>UI/UX, Front-end Developer</h2>
-              <p>A project for my class</p>
+              <p>Worked on the redesign of the website</p>
             </div>
         </a>
     </section>
 
     <section class="container" id="section 4">
         <hgroup class="stick_top">
-            <h1>Uni Demo</h1>
-            <h2>Grey-Box platform</h2>
+            <h1>Fashion Brand</h1>
+            <h2>Neufcycle</h2>
             <!-- <img src="images/Quality and Durability.png" alt="" class="largepic"> -->
 
         </hgroup>
@@ -85,8 +85,8 @@
             <div class="portfolio-card-4">
             </div>
             <div class="card-details">
-              <h2>UI/UX</h2>
-              <p>Group Project for Uni Box</p>
+              <h2>UI/UX, Front-end Developer</h2>
+              <p>A project for my class</p>
             </div>
         </a>
 
