new changes to the descriptions of texts

--- a/ui-ux.html
+++ b/ui-ux.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <a href="index.html" class="nav-link">About</a>
         <a href="ui-ux.html" class="nav-link">UI/UX</a>
-        <a href="marketing.html" class="nav-link">Marketing</a>
+        <a href="marketing.html" class="nav-link">Other Projects</a>
     </nav>
 
 
@@ -68,7 +68,7 @@
             </div>
             <div class="card-details">
               <h2>UI/UX, Front-end Developer</h2>
-              <p>Worked on the redesign of the website</p>
+              <p>A redesign of their interface and their internal processes</p>
             </div>
         </a>
     </section>
@@ -86,12 +86,8 @@
             </div>
             <div class="card-details">
               <h2>UI/UX, Front-end Developer</h2>
-              <p>A project for my class</p>
+              <p>A narrative website for my future brand</p>
             </div>
         </a>
 
-    </section>
-
-</body>
-    
-</html>
+    </secti
