Updating my portfolio
updating the texts, images, and other functions

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <h1 data-scroll data-scroll-direction="horizontal" data-scroll-speed="-3" data-scroll-class="appear"
                         data-scroll-repeat="true" data-scroll-position="top" class="hero-h1">Hello</h1>
                     <h2 data-scroll data-scroll-direction="horizontal" data-scroll-speed="2" data-scroll-class="appear"
-                        data-scroll-repeat="true" class="hero-h2">UI/UX Designer & Multimedia Artist</h2>
+                        data-scroll-repeat="true" class="hero-h2">UI/UX Designer & Founder Core Vizuals</h2>
                     <p data-scroll data-scroll-direction="horizontal" data-scroll-speed="-5" data-scroll-class="appear"
-                        data-scroll-repeat="true" data-scroll-delay="1" class="hero-p">I'm a versatile UI/UX designer and multimedia artist with a strong focus on marketing. My approach revolves around user-centric design principles, where I seamlessly integrate market research, user testing, wireframing, and prototyping to create intuitive digital experiences.</p>
+                        data-scroll-repeat="true" data-scroll-delay="1" class="hero-p">I’m a versatile UI/UX designer and founder of Core Vizuals, a creative agency specializing in interactive media and design solutions. With a strong background in both design and coding, I combine user-centric design principles with technical expertise to deliver intuitive and impactful digital experiences. From market research and user testing to wireframing, prototyping, and front-end development, my work focuses on creating seamless interactions that drive engagement and achieve meaningful results.</p>
                     <div class="social-icons">
                             <!-- Add social icons here -->
                             <a href="https://www.instagram.com/corevizuals/" target="_blank" class="social-icon"><img src="images/instagram.png" alt="Instagram"></a>
@@ -93,8 +93,8 @@
 
         </section>
         <section data-scroll-section>
-            <h2 data-scroll data-scroll-speed="1" data-scroll-class="appear" data-scroll-repeat="true">Multimedia Background</h2>
-            <p data-scroll data-scroll-speed="0" data-scroll-class="appear" data-scroll-repeat="true">I have over +6 years of experience in video editing, graphic design and film production, using Adobe Suite, including After Effects and Premiere Pro. I use my skills to work alongside numerous brands and organizations to help with their visibility online. These experiences have allowed me to create interactive content through different mediums.</p>
+            <h2 data-scroll data-scroll-speed="1" data-scroll-class="appear" data-scroll-repeat="true">My Design Philosophy at Core Vizuals</h2>
+            <p data-scroll data-scroll-speed="0" data-scroll-class="appear" data-scroll-repeat="true">I am the founder of Core Vizuals, a creative agency focused on designing user-centered digital solutions that enhance brands and organizations. My approach blends strategic design thinking with a passion for creating seamless, interactive experiences. Through Core Vizuals, I collaborate with clients to craft intuitive designs and engaging content that drive meaningful connections and amplify their impact online.</p>
         </section>
         
         <section data-scroll-section class="video-section">
@@ -124,7 +124,7 @@
                 <a href="mailto:compuestojohn@gmail.com" class="contact-link">Compuestojohn@gmail.com↗</a>
                 <a href="https://www.linkedin.com/in/johncompuesto/" class="social-link" target="_blank" rel="noopener noreferrer">LinkedIn↗</a>
                 <a href="https://www.instagram.com/corevizuals" class="social-link" target="_blank" rel="noopener noreferrer">Instagram↗</a>
-                <a href="images/John_Compuesto_Resume.pdf" class="social-link" target="_blank" rel="noopener noreferrer">Resume↗</a>
+                <a href="images/my_resume.pdf" class="social-link" target="_blank" rel="noopener noreferrer">Resume↗</a>
             </div>
        </section>
 
