--- a/marketing.html
+++ b/marketing.html
@@ -127,14 +127,14 @@
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/johncompuesto/" class="social-link" target="_blank" rel="noopener noreferrer">LinkedIn↗</a>
                     <a href="https://www.instagram.com/corevizuals" class="social-link" target="_blank" rel="noopener noreferrer">Instagram↗</a>
-                    <a href="images/John_Compuesto_Resume.pdf" class="social-link" target="_blank" rel="noopener noreferrer">Resume↗</a>
+                    <a href="images/my_resume.pdf" class="social-link" target="_blank" rel="noopener noreferrer">Resume↗</a>
                 </div>
             </div>
     
             <!-- Name and Year -->
             <div class="footer-info">
                 <div class="name">John Compuesto</div>
-                <div class="year">© 2024</div>
+                <div class="year">© 2025</div>
             </div>
         </div>
     </div>
