--- a/marketing.html
+++ b/marketing.html
@@ -24,7 +24,7 @@
     <div class="container-1">
         <div class="card card-1">
             <!-- Content for the container-1 -->
-            <h2>John, a product designer by day and a <span class="bold-text">marketing Yoda</span> by night <img src="images/Yoda.png" alt="Circle Picture" style="width: 30px; height: 30px; border-radius: 50%;">, lends his expertise to empower startups with their online presence.</h2>
+            <h2>John, a product designer by day and a <span class="bold-text">design Yoda</span> by night <img src="images/Yoda.png" alt="Circle Picture" style="width: 30px; height: 30px; border-radius: 50%;">, lends his expertise to empower startups with their online presence.</h2>
         </div>
     </div>
 
