--- a/ui-ux.html
+++ b/ui-ux.html
@@ -26,7 +26,7 @@
         </hgroup>
 
 
-        <a href="https://www.figma.com/proto/FHeZpQ9t9ane7XBgWiQMOl/Neufcycle?type=design&node-id=644-1787&t=BQ5EZ1UVhzAmRVSY-1&scaling=scale-down&page-id=614%3A40&mode=design" class="portfolio-card-link">
+        <a href="https://evenko.ca/en" class="portfolio-card-link">
             <div class="portfolio-card-1">
             </div>
             <div class="card-details">
@@ -81,7 +81,7 @@
 
         </hgroup>
 
-        <a href="project-details.html" class="portfolio-card-link">
+        <a href="https://www.figma.com/proto/FHeZpQ9t9ane7XBgWiQMOl/Neufcycle?type=design&node-id=644-1787&t=BQ5EZ1UVhzAmRVSY-1&scaling=scale-down&page-id=614%3A40&mode=design" class="portfolio-card-link">
             <div class="portfolio-card-4">
             </div>
             <div class="card-details">
